@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vcs.changes.committed;
 
 import com.intellij.openapi.application.PathManager;
@@ -10,25 +10,27 @@ import com.intellij.openapi.vcs.RepositoryLocation;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.util.CommonProcessors.CollectProcessor;
 import com.intellij.util.Processor;
+import com.intellij.util.io.DigestUtil;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.io.File;
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
 import static com.intellij.util.containers.ContainerUtil.find;
-import static org.apache.commons.codec.digest.DigestUtils.md5Hex;
+import static com.intellij.util.io.DigestUtilKt.hashToHexString;
 
-public class CachesHolder {
+public final class CachesHolder {
   @NonNls private static final String VCS_CACHE_PATH = "vcsCache";
 
   private final @NotNull Project myProject;
-  private final @NotNull Map<String, ChangesCacheFile> myCacheFiles = new ConcurrentHashMap<>();
+  private final @NotNull Map<String, ChangesCacheFile> cacheFiles = new ConcurrentHashMap<>();
   private final @NotNull RepositoryLocationCache myLocationCache;
 
   public CachesHolder(@NotNull Project project, @NotNull RepositoryLocationCache locationCache) {
@@ -37,7 +39,7 @@ public class CachesHolder {
   }
 
   /**
-   * Returns all paths that will be used to collect committed changes about. ideally, for one checkout there should be one file
+   * Returns all paths that will be used to collect committed changes about. Ideally, for one checkout, there should be one file
    */
   public @NotNull Map<VirtualFile, RepositoryLocation> getAllRootsUnderVcs(@NotNull AbstractVcs vcs) {
     return new RootsCalculator(myProject, vcs, myLocationCache).getRoots();
@@ -57,11 +59,11 @@ public class CachesHolder {
   }
 
   public void reset() {
-    myCacheFiles.clear();
+    cacheFiles.clear();
   }
 
   public void clearAllCaches() {
-    myCacheFiles.values().forEach(ChangesCacheFile::delete);
+    cacheFiles.values().forEach(ChangesCacheFile::delete);
     reset();
   }
 
@@ -72,28 +74,32 @@ public class CachesHolder {
   }
 
   public @NotNull ChangesCacheFile getCacheFile(@NotNull AbstractVcs vcs, @NotNull VirtualFile root, @NotNull RepositoryLocation location) {
-    return myCacheFiles
+    return cacheFiles
       .computeIfAbsent(location.getKey(), key -> new ChangesCacheFile(myProject, getCachePath(location), vcs, root, location));
   }
 
   public @NotNull Path getCacheBasePath() {
-    return Paths.get(PathManager.getSystemPath(), VCS_CACHE_PATH, myProject.getLocationHash());
+    return Path.of(PathManager.getSystemPath(), VCS_CACHE_PATH, myProject.getLocationHash());
   }
 
-  private @NotNull File getCachePath(@NotNull RepositoryLocation location) {
-    File file = getCacheBasePath().toFile();
-    file.mkdirs();
-    return new File(file, md5Hex(location.getKey()));
+  private @NotNull Path getCachePath(@NotNull RepositoryLocation location) {
+    Path file = getCacheBasePath();
+    try {
+      Files.createDirectories(file);
+    }
+    catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
+    return file.resolve(hashToHexString(location.getKey(), DigestUtil.md5()));
   }
 
   public @Nullable ChangesCacheFile haveCache(@NotNull RepositoryLocation location) {
     String key = location.getKey();
-    ChangesCacheFile result = myCacheFiles.get(key);
-
+    ChangesCacheFile result = cacheFiles.get(key);
     if (result == null) {
       String keyWithSlash = key.endsWith("/") ? key : key + "/";
-      String cachedSimilarKey = find(myCacheFiles.keySet(), s -> keyWithSlash.startsWith(s) || s.startsWith(keyWithSlash));
-      result = cachedSimilarKey != null ? myCacheFiles.get(cachedSimilarKey) : null;
+      String cachedSimilarKey = find(cacheFiles.keySet(), s -> keyWithSlash.startsWith(s) || s.startsWith(keyWithSlash));
+      result = cachedSimilarKey != null ? cacheFiles.get(cachedSimilarKey) : null;
     }
 
     return result;
